--- a/cookie/index.html
+++ b/cookie/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'"> <!--added security policy-->
+
   <link rel="icon" href="https://fav.farm/🍪">
   <title>Cookie</title>
   <link rel="stylesheet" href="styles.css"> <!-- sets color as blue -->
